--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,8 +11,7 @@
  * file per style scope.
  *
 
- *= require angular-material
-  
+ *= require bootstrap  
  *= require_tree .
  *= require_self
  */
