--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,8 @@
     %meta{:name => "description", :content => "#{content_for?(:description) ? yield(:description) : 'Nz Makers'}"}
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    %script{ src: "http://maps.google.com/maps/api/js?sensor=false" }
+
     = csrf_meta_tags
   %body
     .navbar.navbar-default.navbar-static-top
@@ -29,27 +31,13 @@
                 %i.fa.fa-rss
                 
           %ul.nav.navbar-nav.navbar-right
-            / - if current_user
-            /   %li 
-            /     = link_to current_user do
-            /       %i.fa.fa-user.text-muted
-            /       = current_user.display_name
-
-            /       %i.fa.fa-star
-            /       = "  #{current_user.karma} -"
-
-            /       %i.fa.fa-coins
-            /       0.00 bits
-            / - else
-            /   %li
-            /     = link_to 'login', new_user_session_path
                   
-                  
-    #main_content{ class: content_for?(:layout_type) ? yield(:layout_type) : 'container', 'ng-app': "collaboTree" }
-      .view-frame.animate-view{ "ng-view": "" }
-        .row{style: 'height: 0'}
-          .col-md-4.pull-right
-            
+    .row
+      #map-container.col-md-12     
+    #main_content{ class: content_for?(:layout_type) ? yield(:layout_type) : 'container' }
+      .row{style: 'height: 0'}
+        .col-md-4.pull-right
+      .row  
         = yield
         
       %footer
