--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -1,4 +1,19 @@
-
+%h4 Tags
 - @tags.each do |tag|
-  %p
-    = link_to tag.name, tag 
+  %button.btn.btn-default{ type: "button" }
+    %span.glyphicon.glyphicon-tag
+      = link_to tag.name, tag 
+
+
+
+%h2 Results
+.media
+  .media-left.media-middle
+    
+    %img.media-object{ src: "https://placeholdit.imgix.net/~text?txtsize=33&txt=P&w=60&h=60" }
+
+  .media-body
+    %h4.media-heading
+      AUT CoLab 
+    Colab is the colaboratory of Design & Creative Technologies at AUT University. A research and teaching institute where we imagine the future...
+
