--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -1,19 +1,19 @@
-%h4 Tags
-- @tags.each do |tag|
-  %button.btn.btn-default{ type: "button" }
-    %span.glyphicon.glyphicon-tag
-      = link_to tag.name, tag 
+.row
+  .col-md-8
+    %h2 Results
+    .media
+      .media-left.media-middle
+        
+        %img.media-object{ src: "https://placeholdit.imgix.net/~text?txtsize=33&txt=P&w=60&h=60" }
 
+      .media-body
+        %h4.media-heading
+          AUT CoLab 
+        Colab is the colaboratory of Design & Creative Technologies at AUT University. A research and teaching institute where we imagine the future...
 
-
-%h2 Results
-.media
-  .media-left.media-middle
-    
-    %img.media-object{ src: "https://placeholdit.imgix.net/~text?txtsize=33&txt=P&w=60&h=60" }
-
-  .media-body
-    %h4.media-heading
-      AUT CoLab 
-    Colab is the colaboratory of Design & Creative Technologies at AUT University. A research and teaching institute where we imagine the future...
-
+  .col-md-4
+    %h4 Tags
+    - @tags.each do |tag|
+      = link_to tag, class: "btn btn-default" do
+        %span.glyphicon.glyphicon-tag
+        = tag.name
