--- a/app/views/people/_form.html.haml
+++ b/app/views/people/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@person) do |f|
+= simple_form_for(@person, html: { class: 'form-horizontal' }) do |f|
   = f.error_notification
 
   .form-inputs
