--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -2,14 +2,13 @@
   .col-md-8
     %h2 Results
     .media
-      .media-left.media-middle
-        
-        %img.media-object{ src: "https://placeholdit.imgix.net/~text?txtsize=33&txt=P&w=60&h=60" }
-
-      .media-body
-        %h4.media-heading
-          AUT CoLab 
-        Colab is the colaboratory of Design & Creative Technologies at AUT University. A research and teaching institute where we imagine the future...
+      - @results.each do |result|
+        .media-left.media-middle        
+          %img.media-object{ src: "https://placeholdit.imgix.net/~text?txtsize=33&txt=P&w=60&h=60" }
+        .media-body
+          %h4.media-heading
+            = result.name
+          = result.try(:description)
 
   .col-md-4
     %h4 Tags
