--- a/app/views/tags/_form.html.haml
+++ b/app/views/tags/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@tag) do |f|
+= simple_form_for(@tag, html: { class: 'form-horizontal' }) do |f|
   = f.error_notification
 
   .form-inputs
