fill out the user form a bit

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,7 +28,11 @@
             %li
               = link_to places_path do
                 Places
-                %i.fa.fa-rss
+                %span.glyphicon.glyphicon-tree-deciduous
+            %li
+              = link_to people_path do
+                People
+                %span.glyphicon.glyphicon-user
           = form_for root_url, method: :get, html: { class: "navbar-form navbar-right"} do |f|
             .form-group.input-group-lg
               %input.form-control{ type: 'text', placeholder: "Search", name: 'q', value: params[:q] }
