--- a/app/views/people/index.html.haml
+++ b/app/views/people/index.html.haml
@@ -11,7 +11,7 @@
   %tbody
     - @people.each do |person|
       %tr
-        %td= person.jsonb
+        %td= person.data
         %td= link_to 'Show', person
         %td= link_to 'Edit', edit_person_path(person)
         %td= link_to 'Destroy', person, :method => :delete, :data => { :confirm => 'Are you sure?' }
