--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -3,12 +3,13 @@
     %h2 Results
     .media
       - @results.each do |result|
-        .media-left.media-middle        
-          %img.media-object{ src: "https://placeholdit.imgix.net/~text?txtsize=33&txt=P&w=60&h=60" }
-        .media-body
-          %h4.media-heading
-            = result.name
-          = result.try(:description)
+        %p.result
+          .media-left.media-middle        
+            %img.media-object{ src: "https://placeholdit.imgix.net/~text?txtsize=33&txt=P&w=60&h=60" }
+          .media-body
+            %h4.media-heading
+              = result.name
+            = result.try(:description)
 
   .col-md-4
     %h4 Tags
