--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -6,7 +6,7 @@
         .panel.panel-default
           .panel-body  
             .media-left.media-middle        
-              %img.media-object{ src: "https://placeholdit.imgix.net/~text?txtsize=33&txt=P&w=60&h=60" }
+              %img.media-object{ src: "http://placeholdit.imgix.net/~text?txtsize=33&txt=P&w=60&h=60" }
             .media-body
               %h4.media-heading
                 = result.name
