--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -4,12 +4,14 @@
     .media
       - @results.each do |result|
         .panel.panel-default
-          .panel-body  
-            .media-left.media-middle        
-              %img.media-object{ src: "http://placeholdit.imgix.net/~text?txtsize=33&txt=P&w=60&h=60" }
+          .panel-body
+            .media-left.media-middle
+              = link_to result do
+                %img.media-object{ src: "http://placeholdit.imgix.net/~text?txtsize=33&txt=P&w=60&h=60" }
             .media-body
               %h4.media-heading
-                = result.name
+                = link_to result do
+                  = result.name
               = result.try(:description)
 
   .col-md-4
