--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
 
-    %script{ src: "http://maps.google.com/maps/api/js?sensor=false" }
+    %script{ src: "http://maps.google.com/maps/api/js?sensor=true" }
 
     = csrf_meta_tags
   %body
