--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -7,7 +7,7 @@
           .panel-body
             .media-left.media-middle
               = link_to result do
-                %img.media-object{ src: "http://placeholdit.imgix.net/~text?txtsize=33&txt=P&w=60&h=60" }
+                = image_tag("//placeholdit.imgix.net/~text?txtsize=33&txt=P&w=60&h=60", class: "media-object" )
             .media-body
               %h4.media-heading
                 = link_to result do
