--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -7,7 +7,11 @@
           .panel-body
             .media-left.media-middle
               = link_to result do
-                = image_tag("//placeholdit.imgix.net/~text?txtsize=33&txt=P&w=60&h=60", class: "media-object" )
+                - if result.is_a? Person
+                  %span.glyphicon.glyphicon-user
+                - elsif result.is_a? Place
+                  %span.glyphicon.glyphicon-map-marker
+
             .media-body
               %h4.media-heading
                 = link_to result do
