--- a/app/views/people/index.html.haml
+++ b/app/views/people/index.html.haml
@@ -1,21 +1,13 @@
-%h1 Listing people
-
-%table
-  %thead
-    %tr
-      %th Jsonb
-      %th
-      %th
-      %th
-
-  %tbody
+%h1 People
+.row
+  .col-md-8
     - @people.each do |person|
-      %tr
-        %td= person.data
-        %td= link_to 'Show', person
-        %td= link_to 'Edit', edit_person_path(person)
-        %td= link_to 'Destroy', person, :method => :delete, :data => { :confirm => 'Are you sure?' }
+      = render partial: 'search/result', locals: { result: person }
+      - if current_user
+        = link_to 'Show', person
+        = link_to 'Edit', edit_person_path(person)
+        = link_to 'Destroy', person, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
 
-= link_to 'New Person', new_person_path
+= link_to 'Suggest New Person', new_person_path
