--- a/app/views/search/_result.html.haml
+++ b/app/views/search/_result.html.haml
@@ -16,10 +16,12 @@
           - else
             - # normal thing:
             = result.try :name
-        - if result.try(:tags)
+
+        - # render tags if they exist
+        - if result.tags
           .pull-right
             - result.tags.each do |tag|
               %span.glyphicon.glyphicon-tag
               = tag.name
-          
+
       = result.try(:description)
