--- a/app/views/places/show.html.haml
+++ b/app/views/places/show.html.haml
@@ -10,6 +10,10 @@
   %b Latlong:
   = @place.latlong
 
-= link_to 'Edit', edit_place_path(@place)
-\|
-= link_to 'Back', places_path
+%p
+  %b Tags
+  - @place.tags.each do |tag|
+    = render partial: "tags/show_small.html", locals: { tag: tag }
+= link_to edit_place_path(@place), class: "btn btn-default" do
+  %span.glyphicon.glyphicon-pencil
+  Edit
