fixed up tag show page

--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -1,15 +1,7 @@
-
-%p#notice
-
 %p#notice= notice
 
-%pre
-  = @tag.inspect
-= "hello"
-%p
-  %b Name:
-  = @tag.name
+%h4= @tag.name
 
-= link_to 'Edit', edit_tag_path(@tag)
-\|
-= link_to 'Back', tags_path
+= link_to edit_tag_path(@tag), class: 'btn btn-default' do
+  %span.glyphicon.glyphicon-pencil
+  Edit
