--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,7 +11,7 @@
  * file per style scope.
  *
 
- *= require bootstrap  
+ *= require bootstrap
  *= require chosen
  *= require_tree .
  *= require_self
@@ -22,4 +22,11 @@
 #map-container
 {
   min-height: 20em
+}
+
+
+.tag
+{
+  padding: 0.3em;
+  color: black;
 }
