--- a/app/views/tags/_show_small.html.haml
+++ b/app/views/tags/_show_small.html.haml
@@ -1,3 +1,3 @@
-= link_to root_url(q: tag.name), class: "btn btn-default btn-sm" do  
-  %span.glyphicon.glyphicon-tag
-  = tag.name
+%small.tag
+  = link_to root_url(q: tag.name) do
+    = tag.name
