--- a/app/views/search/_result.html.haml
+++ b/app/views/search/_result.html.haml
@@ -23,4 +23,6 @@
             - result.tags.each do |tag|
               = render partial: "tags/show_small.html", locals: { tag: tag }
 
-      = result.try(:description)
+      - if result.try(:description)
+        %p
+          = markdown(result.description).html_safe 
