--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,10 @@
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
 
+    = stylesheet_link_tag "//cdn.jsdelivr.net/editor/0.1.0/editor.css"
+    = javascript_include_tag "//cdn.jsdelivr.net/editor/0.1.0/editor.js"
+    = javascript_include_tag "//cdn.jsdelivr.net/editor/0.1.0/marked.js"
+
     %script{ src: "//maps.google.com/maps/api/js?sensor=true&key=#{ENV['GOOGLE_MAP_API_KEY']}" }
 
     = csrf_meta_tags
