--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,6 @@
+//= depend_on_asset "layers.png"
+//= depend_on_asset "layers-2x.png"
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -13,6 +16,7 @@
 
  *= require bootstrap
  *= require chosen
+ *= require leaflet
  *= require_tree .
  *= require_self
  */
