--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,7 +18,7 @@
 
     = csrf_meta_tags
   %body
-    .navbar.navbar-default.navbar-static-top
+    #main_nav.navbar.navbar-default.navbar-static-top
       .container
         %button.navbar-toggle(type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse")
           %span.fa.fa-bar
