larger result pool for map pins + map layout fix

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,8 +45,8 @@
 
     #container-fluid
       .row
-        #map-container.col-md-12
-
+        .col-md-12
+          #map-container
     #main_content{ class: content_for?(:layout_type) ? yield(:layout_type) : 'container' }
       .row{style: 'height: 0'}
         .col-md-4.pull-right
