--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -1,3 +1,4 @@
+
 .row
   .col-md-8
     %h2 Results
@@ -10,6 +11,8 @@
     - @tags.each do |tag|
       = render partial: "tags/show_small.html", locals: { tag: tag }
 
+
+
 %script
   var map;
   map = L.map('map-container').setView([-36.8406, 174.74], 12);
@@ -18,5 +21,5 @@
   }).addTo(map);
 
   - @all_results.each do |r|
-    - next unless r.latlong
+    - next if r.latlong.blank?
     L.marker(#{r.latlong}).addTo(map);
