Popups from map pins YEAH

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -43,10 +43,11 @@
 
 
 
-    #container-fluid
-      .row
-        .col-md-12
-          #map-container
+    - if @all_results
+      #container-fluid
+        .row
+          .col-md-12
+            #map-container
     #main_content{ class: content_for?(:layout_type) ? yield(:layout_type) : 'container' }
       .row{style: 'height: 0'}
         .col-md-4.pull-right
