--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -25,3 +25,6 @@
     = link_to edit_person_path(@person), class: "btn btn-default" do
       %span.glyphicon.glyphicon-pencil
       Edit
+
+
+= render "search/map"
