--- a/app/views/places/show.html.haml
+++ b/app/views/places/show.html.haml
@@ -23,3 +23,6 @@
 = link_to edit_place_path(@place), class: "btn btn-default" do
   %span.glyphicon.glyphicon-pencil
   Edit
+
+
+= render "search/map"
