--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -13,13 +13,4 @@
 
 
 
-%script
-  var map;
-  map = L.map('map-container').setView([-36.8406, 174.74], 12);
-
-  L.tileLayer('http://b.tile.openstreetmap.org/{z}/{x}/{y}.png', { maxZoom: 18
-  }).addTo(map);
-
-  - @all_results.each do |r|
-    - next if r.latlong.blank?
-    L.marker(#{r.latlong}).addTo(map);
+= render "map"
