bring big result popups under control

--- a/app/views/search/_result.html.haml
+++ b/app/views/search/_result.html.haml
@@ -1,5 +1,5 @@
 .panel.panel-default
-  .panel-body
+  .panel-body.search-result-body
     .media-left.media-middle
       = link_to result do
         - if result.is_a? Person
